# cymatics

./: .gitignore  README.md
docs/: main.js  style.css
docs/pkg/: package.json  rust_chladni_logic.d.ts  rust_chladni_logic.js  rust_chladni_logic_bg.wasm  rust_chladni_logic_bg.wasm.d.ts
rust_chladni_logic/: Cargo.toml
rust_chladni_logic/src/: lib.rs
web_chladni_ui/: index.html  main.js  package.json  style.css
